<resources>
    <string name="app_name">Boa Viagem</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="password">password</string>
    <string name="user">user</string>
    <string name="todo">TODO</string>
    <string name="mensageErroUser">Usuário ou senha inválidos</string>
    <string name="novo_gasto">Novo Gasto</string>
    <string name="nova_viagem">Nova Viagem</string>
    <string name="minhas_viagens">Minhas Viagens</string>
    <string name="destino">Destino</string>
    <string name="lazer">Lazer</string>
    <string name="negoc_os">Negócios</string>
    <string name="data_de_chegada">Data de Chegada</string>
    <string name="data_de_sa_da">Data de Saída</string>
    <string name="selecione">Selecione</string>
    <string name="tipo_da_viagem">Tipo da Viagem</string>
    <string name="orcamento">Orçamento</string>
    <string name="quantidade_de_pessoas">Quantidade de Pessoas</string>
    <string name="salvar">Salvar</string>
    <string name="valor">Valor</string>
    <string name="data">Data</string>
    <string name="descri_o">Descrição</string>
    <string name="local">Local</string>
    <string name="categor_a">Categoría</string>

    <string-array name="categoria_gasto">
        <item>Alimentação</item>
        <item>Combustível</item>
        <item>Transporte</item>
        <item>Hospedagem</item>
        <item>Outros</item>
    </string-array>
</resources>
