<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".login_activity"
        android:fillViewport="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:src="@drawable/backpack"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/usuario"
                style="@style/CustomTextViewLogin"/>

        <EditText
                android:id="@+id/usuario"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                style="@style/CustomEditTextLogin"
                android:inputType="text"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/senha"
                style="@style/CustomTextViewLogin"/>

        <EditText
                android:id="@+id/senha"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                style="@style/CustomEditTextLogin"
                android:inputType="textPassword"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/rount_button"
                android:layout_gravity="bottom"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:onClick="entrarOnClick"
                android:text="@string/entrar"/>

    </LinearLayout>

</ScrollView>