<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".dashboard_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">


        <TextView
                android:id="@+id/novo_gasto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="80dp"
                android:drawableTop="@drawable/novo_gasto"
                android:onClick="onNewExpense"
                android:text="@string/novo_gasto"
                style="@style/dashboardTextView"/>

        <TextView
                android:id="@+id/nova_viagem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/novo_gasto"
                android:layout_marginRight="50dp"
                android:drawableTop="@drawable/nova_viagem"
                android:onClick="onNewTravel"
                android:text="@string/nova_viagem"
                style="@style/dashboardTextView"/>

        <TextView
                android:id="@+id/minhas_viagens"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/novo_gasto"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="80dp"
                android:drawableTop="@drawable/minhas_viagens"
                android:onClick="onMyTravel"
                android:text="@string/minhas_viagens"
                style="@style/dashboardTextView"/>

        <TextView
                android:id="@+id/configuracao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/minhas_viagens"
                android:layout_alignRight="@id/nova_viagem"
                android:drawableTop="@drawable/configuracao"
                android:onClick="onNewTraveln"
                android:text="Configurações"
                style="@style/dashboardTextView"/>


</RelativeLayout>